--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Index Page</title>
     <style>
         h1{
-            color: red;
+            color: green;
         }
     </style>
 </head>
